--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@ body {
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="{{url_for('home')}}">Home</a>
 
   <div class="dropdown">
     <button class="dropbtn">Options
