--- a/templates/about.html
+++ b/templates/about.html
@@ -126,7 +126,7 @@ h2 {
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="{{url_for('home')}}">Home</a>
 
   <div class="dropdown">
     <button class="dropbtn">Options 
