--- a/templates/about.html
+++ b/templates/about.html
@@ -993,7 +993,7 @@ $(".hover").mouseleave(
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-            <h6>&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence Aspirant </h6>
+            <h6>&nbsp;&nbsp;&nbsp;&nbsp;AI Aspirant </h6>
             <p class="text-justify">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DHEERAJ KUMAR K <i>Currently, I am looking for a full-time role in Data Science, Machine Learning or related field.It just a small try to showcase my web development skills and my passion towards technology if you want to <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HIRE ME</i>, kindly <I> CONNECT WITH ME</i> using below available social media or <I> CONTACT ME</i> by clicking <i>HIRE ME</i> button in my profile </p>
           </div>
          
